Changes in 1.8 (??.0?.2010)

 - Add vector3d::getAs3Values (patch provided by slavik262)

 - Add function to SViewFrustum to get corners of the near plane (patch provided by Matt Kline, aka slavik262)

 - ParticleFadeOutAffector::setFadeOutTime can no longer be set to invalid values

 - ParticleFadeOutAffector uses now throughout u32 for fadeOutTime (found by greenya)

 - Add missing access function CParticleSystemSceneNode::getAffectors() (seen by B@z)

 - Add missing setters/getters for particle emitters (seen by B@z)

 - Compile-defines can now be disabled from Makefiles/Projectfiles instead of having to change IrrCompileConfig.h each time.

 - IGUITabControl::setActiveTab should only take IGUITab* and not IGUIElement* (thx to greenya for finding)
 
 - Add new skin-colors: EGDC_GRAY_WINDOW_SYMBOL, EGDC_EDITABLE, EGDC_GRAY_EDITABLE, EGDC_FOCUSED_EDITABLE
 
 - Disabled state is now extended to sub-elements
 
 - Make disabled state for several elements more visible
 
 - Bugfix: Icons in tabcontrol get now affected immediately by skin-changes

 - Add xml example written by Yoran Bosman.

 - Add creation parameter which allows to disable highres timers on Windows upon device creation.

 - Several transparency setup bugs fixed.

 - Added a method to get real time and date in a human readable struct

 - Add IGUIElement::bringToBack (patch written by DtD, although I'm to blame for the function-name)

 - BurningVideo 
   - add Normalmap Rendering (one light only), pushed Burningvideo to 0.46
   - add Stencil Shadow Rendering (one color only and 32 bit only),
     pushed Burningvideo to 0.47
   - internal vertexformat changed
   - changed fixpoint from 9 to 10 bit fract resolution
   - renamed createBurningVideoDriver to createBurningVideoDriver and uses SIrrlichtCreationParameters like opengl
   - internal interfaces for the trianglerenders unified.

 - Example 11, changed the light billboards to use the light color.