@@ -186,6 +186,11 @@ s32 CTerrainTriangleSelector::getTriangleCount() const
 	return TrianglePatches.TotalTriangles;
 }
 
+ISceneNode* CTerrainTriangleSelector::getSceneNodeForTriangle(u32 triangleIndex) const
+{
+	return SceneNode;
+}
+
 } // end namespace scene
 } // end namespace irr
 
